# backend/src/main/java/com/zl/mjga/dto/department/DepartmentQueryDto.java
@@ -1,5 +1,6 @@
 package com.zl.mjga.dto.department;
 
+import com.zl.mjga.model.urp.BindState;
 import lombok.*;
 
 @Getter
@@ -8,6 +9,8 @@ import lombok.*;
 @AllArgsConstructor
 @NoArgsConstructor
 public class DepartmentQueryDto {
+  private Long userId;
   private String name;
   private Boolean enable;
+  private BindState bindState = BindState.ALL;
 }
